--- a/Mrida/Mrida/Mrida.vcxproj
+++ b/Mrida/Mrida/Mrida.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="response.cpp" />
     <ClCompile Include="shannon_entropy.cpp" />
     <ClCompile Include="threat_info.cpp" />
+    <ClCompile Include="web_blocker.cpp" />
     <ClCompile Include="yara_error_checker.cpp" />
     <ClCompile Include="yara_scanner.cpp" />
   </ItemGroup>
@@ -138,6 +139,7 @@
     <ClInclude Include="response.h" />
     <ClInclude Include="shannon_entropy.h" />
     <ClInclude Include="threat_info.h" />
+    <ClInclude Include="web_blocker.h" />
     <ClInclude Include="yara_error_checker.h" />
     <ClInclude Include="yara_scanner.h" />
   </ItemGroup>
