--- a/Mrida/Mrida/Mrida.vcxproj
+++ b/Mrida/Mrida/Mrida.vcxproj
@@ -98,7 +98,9 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\yaracpp-master\include;D:\yaracpp-master\build\deps\yara\src\yara\libyara\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\yaracpp-master\include;D:\yaracpp-master\build\deps\yara\src\yara\libyara\include;D:\sqlite_modern_cpp-master\hdr;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <PreprocessorDefinitions>SQLITE_ENABLE_COLUMN_METADATA;SQLITE_ENABLE_RTREE;SQLITE3_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -126,6 +128,7 @@
     <ClCompile Include="packer_detector.cpp" />
     <ClCompile Include="response.cpp" />
     <ClCompile Include="shannon_entropy.cpp" />
+    <ClCompile Include="sqlite3.c" />
     <ClCompile Include="threat_info.cpp" />
     <ClCompile Include="web_blocker.cpp" />
     <ClCompile Include="yara_error_checker.cpp" />
@@ -138,6 +141,7 @@
     <ClInclude Include="packer_detector.h" />
     <ClInclude Include="response.h" />
     <ClInclude Include="shannon_entropy.h" />
+    <ClInclude Include="sqlite3.h" />
     <ClInclude Include="threat_info.h" />
     <ClInclude Include="web_blocker.h" />
     <ClInclude Include="yara_error_checker.h" />
