Scanning folder in front-end

--- a/mrida_java/nbproject/project.properties
+++ b/mrida_java/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/mrida_java.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.json-simple-1.1.1.jar=C:\\Users\\Kanchana\\Downloads\\json-simple-1.1.1.jar
+file.reference.jsoup-1.11.3.jar=C:\\Users\\Kanchana\\Downloads\\jsoup-1.11.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsoup-1.11.3.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
