One good milestone :sparkling_heart:

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /mrida_java/nbproject/private/
 /mrida_java/build/
 /releases
-/Mrida/Mrida/Mrida/Release
-/Mrida/procscan/.idea
+/mrida_gui
+/mrida_java
+/Mrida/Mrida/Mrida/Release/
+/Mrida/procscan/.idea/
